api : home endpoint added
